--- a/style.css
+++ b/style.css
@@ -92,6 +92,11 @@ body {
     justify-content: center;
 }
 
+.button-reset{
+    width: 300px;
+    justify-content: center;
+}
+
 /* Estilos de entrada de texto */
 .input-title {
     flex: 1;
@@ -124,6 +129,18 @@ button {
 .button-add:hover {
     background-color: #a1a1a1;
 }
+
+.button-reset {
+    background-color: var(--color-tertiary);
+    color: var(--color-text);
+    border-radius: 0 25px 25px 0;
+}
+
+.button-reset:hover {
+    background-color: #a1a1a1;
+}
+
+
 
 /* Listas */
 ul {
@@ -158,5 +175,23 @@ ul {
 }
 
 .button-draw:hover {
+    background-color: var(--color-button-hover);
+}
+
+.button-reset {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10px 40px;
+    color: var(--color-white);
+    background-color: var(--color-button);
+    font-size: 16px;
+}
+
+.button-reset img {
+    margin-right: 40px;
+}
+
+.button-reset:hover {
     background-color: var(--color-button-hover);
 }
