--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ ul {
 }
 
 /* Botón de sortear título */
-.button-draw {
+/*.button-draw {
     display: flex;
     align-items: center;
     width: 100%;
@@ -193,5 +193,28 @@ ul {
 }
 
 .button-reset:hover {
+    background-color: var(--color-button-hover);
+}*/
+
+.button-primary {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10px 40px;
+    color: var(--color-white);
+    background-color: var(--color-button);
+    font-size: 16px;
+    border: 2px solid #000;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0,0, 0,0.3);
+    cursor: pointer;
+    justify-content: center;
+}
+
+.button-primary img{
+    margin-right: 40px;
+}
+
+.button-primary:hover{
     background-color: var(--color-button-hover);
 }
